gccida/c0/fixup_abnormal_edges
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_abnormal_edges/src/reload1.c:9993:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
insn = ( rtx)insn[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_abnormal_edges/src/reload1.c:9996:15: error: use of undeclared identifier 'off_88ECD0'
fancy_abort( &off_88ECD0[4], 9527, "fixup_abnormal_edges"); 
              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_abnormal_edges/src/obj/reload1.o] Error 1
